--- a/app/src/main/res/menu/botton_nav_menu.xml
+++ b/app/src/main/res/menu/botton_nav_menu.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Home"
-       android:icon="@drawable/baseline_home_24"
-        android:id="Home"/>
-    <item android:title="Planner"
-        android:icon="@drawable/baseline_calendar_month_24"
-        android:id="Planner"/>
-    <item android:title="Fav"
-        android:id="Fav"
+    <item
+        android:id="@+id/HomeMenu"
+        android:title="HomeMenu"
+        android:icon="@drawable/baseline_home_24"
+        />
+    <item
+        android:id="@+id/PlannerMenu"
+        android:title="PlannerMenu"
+        android:icon="@drawable/baseline_calendar_month_24" />
+
+    <item android:title="FavMenu"
+        android:id="@+id/FavMenu"
         android:icon="@drawable/baseline_favorite_24"/>
 </menu>
