--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,7 +24,7 @@
                 android:fontFamily="@font/hachi_maru_pop"
                 android:text="@string/dailysuggest"
                 android:textColor="#7E102C"
-                android:textSize="24sp"
+                android:textSize="30sp"
                 android:textStyle="bold|italic"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -59,13 +59,13 @@
                 android:fontFamily="@font/hachi_maru_pop"
                 android:text="@string/txtcuisines"
                 android:textColor="#7E102C"
-                android:textSize="20sp"
+                android:textSize="30sp"
                 android:textStyle="bold|italic"
                 app:layout_constraintStart_toStartOf="@+id/txtDailySuggest"
                 app:layout_constraintTop_toBottomOf="@+id/recyclerRandomMeal" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerByCuisines"
+                android:id="@+id/recyclerCategory"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -75,8 +75,8 @@
 
             <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/lottieCuisine"
-                android:layout_width="99dp"
-                android:layout_height="77dp"
+                android:layout_width="141dp"
+                android:layout_height="117dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="4dp"
                 app:layout_constraintBottom_toBottomOf="@+id/txtCuisines"
@@ -94,17 +94,19 @@
                 android:layout_marginTop="24dp"
                 android:text="@string/txtcountry"
                 android:textColor="#7E102C"
-                android:textSize="20sp"
+                android:textSize="30sp"
                 android:textStyle="bold|italic"
                 app:layout_constraintStart_toStartOf="@+id/txtCuisines"
-                app:layout_constraintTop_toBottomOf="@+id/recyclerByCuisines" />
+                app:layout_constraintTop_toBottomOf="@+id/recyclerCategory" />
 
             <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/lottieEarth"
-                android:layout_width="90dp"
-                android:layout_height="63dp"
+                android:layout_width="119dp"
+                android:layout_height="81dp"
+                android:layout_marginStart="22dp"
                 app:layout_constraintEnd_toEndOf="@+id/lottieCuisine"
-                app:layout_constraintTop_toBottomOf="@+id/recyclerByCuisines"
+                app:layout_constraintStart_toEndOf="@+id/txtCountry"
+                app:layout_constraintTop_toBottomOf="@+id/recyclerCategory"
                 app:lottie_autoPlay="true"
                 app:lottie_loop="true"
                 app:lottie_rawRes="@raw/earth" />
