--- a/app/src/main/res/layout/fragment_planner.xml
+++ b/app/src/main/res/layout/fragment_planner.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Screens.plannerFragment">
+    tools:context=".Screens.PlannerScreen.PlannerFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
