--- a/app/src/main/res/navigation/navbar.xml
+++ b/app/src/main/res/navigation/navbar.xml
@@ -12,12 +12,12 @@
         tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/favFragment"
-        android:name="com.example.mvp_food_planner.Screens.FavFragment"
+        android:name="com.example.mvp_food_planner.Screens.FavScreen.FavFragment"
         android:label="fragment_fav"
         tools:layout="@layout/fragment_fav" />
     <fragment
         android:id="@+id/plannerFragment"
-        android:name="com.example.mvp_food_planner.Screens.plannerFragment"
+        android:name="com.example.mvp_food_planner.Screens.PlannerScreen.PlannerFragment"
         android:label="fragment_planner"
         tools:layout="@layout/fragment_planner" />
 </navigation>
