--- a/app/src/main/res/layout/fragment_on_click_meal.xml
+++ b/app/src/main/res/layout/fragment_on_click_meal.xml
@@ -38,6 +38,17 @@
                 app:layout_constraintTop_toBottomOf="@+id/txtRecipeTitle"
                 tools:src="@tools:sample/avatars" />
 
+            <CheckBox
+                android:id="@+id/cbHeart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:layout_marginEnd="36dp"
+                android:button="@drawable/selector_wishlist_item"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:useMaterialThemeColors="false" />
+
             <TextView
                 android:id="@+id/txtIngrediant"
                 android:layout_width="wrap_content"
