--- a/app/src/main/res/layout/fragment_planner.xml
+++ b/app/src/main/res/layout/fragment_planner.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Screens.PlannerScreen.PlannerFragment">
+    tools:context=".Screens.PlannerScreen.View.PlannerFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -37,8 +37,8 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/plannedRecycler"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="18dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView" />
