--- a/app/src/main/res/navigation/navbar.xml
+++ b/app/src/main/res/navigation/navbar.xml
@@ -17,12 +17,12 @@
         tools:layout="@layout/fragment_fav" />
     <fragment
         android:id="@+id/plannerFragment"
-        android:name="com.example.mvp_food_planner.Screens.PlannerScreen.PlannerFragment"
+        android:name="com.example.mvp_food_planner.Screens.PlannerScreen.View.PlannerFragment"
         android:label="fragment_planner"
         tools:layout="@layout/fragment_planner" />
     <fragment
         android:id="@+id/filterFragment"
-        android:name="com.example.mvp_food_planner.Screens.PlannerScreen.PlannerFragment"
+        android:name="com.example.mvp_food_planner.Screens.PlannerScreen.View.PlannerFragment"
         android:label="fragment_planner"
         tools:layout="@layout/fragment_filter" />
 </navigation>
