--- a/app/src/main/res/layout/recycler_plan.xml
+++ b/app/src/main/res/layout/recycler_plan.xml
@@ -15,8 +15,8 @@
 
             <ImageView
                 android:id="@+id/imgplan"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="125dp"
+                android:layout_height="121dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -69,6 +69,8 @@
                 android:layout_height="37dp"
                 android:layout_marginStart="136dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/txtPlanTitle"
                 app:layout_constraintTop_toTopOf="parent"
                 app:lottie_autoPlay="true"
