--- a/app/src/main/res/layout/recycler_plan.xml
+++ b/app/src/main/res/layout/recycler_plan.xml
@@ -18,14 +18,14 @@
                 android:layout_width="125dp"
                 android:layout_height="121dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="32dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
                 android:id="@+id/txtPlanTitle"
-                android:layout_width="wrap_content"
+                android:layout_width="97dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="17dp"
                 android:text="@string/title"
@@ -58,20 +58,23 @@
                 android:id="@+id/txtPlanDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="33dp"
+                android:layout_marginStart="115dp"
+                android:layout_marginTop="36dp"
+                android:layout_marginBottom="8dp"
                 android:text="@string/date"
-                app:layout_constraintStart_toEndOf="@+id/imgplan"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtPlanCountry" />
 
             <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/lottieTrash"
                 android:layout_width="51dp"
                 android:layout_height="37dp"
-                android:layout_marginStart="136dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="4dp"
                 android:layout_marginEnd="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/txtPlanTitle"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/imgplan"
                 app:layout_constraintTop_toTopOf="parent"
                 app:lottie_autoPlay="true"
                 app:lottie_loop="true"
