--- a/app/src/main/res/layout/fragment_by_category.xml
+++ b/app/src/main/res/layout/fragment_by_category.xml
@@ -10,9 +10,33 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="156dp"
-        android:layout_marginTop="293dp"
-        android:text="@string/txtcuisines"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="36dp"
+        android:fontFamily="@font/fjalla_one"
+        android:text="@string/catFilter"
+        android:textSize="24sp"
+        android:textStyle="bold|italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottieCategory"
+        android:layout_width="164dp"
+        android:layout_height="112dp"
+        android:layout_marginTop="-20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView6"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/cuisine" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerCategoryfilter"
+        android:layout_width="409dp"
+        android:layout_height="636dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lottieCategory" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
