--- a/app/src/main/res/layout/recycler_category.xml
+++ b/app/src/main/res/layout/recycler_category.xml
@@ -8,12 +8,14 @@
 
     <ImageView
         android:id="@+id/imgMeal"
-        android:layout_width="216dp"
-        android:layout_height="216dp"
+        android:layout_width="211dp"
+        android:layout_height="213dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/soft_edges"
         app:circularflow_radiusInDP="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
@@ -23,9 +25,12 @@
         android:layout_width="wrap_content"
         android:layout_height="38dp"
         android:layout_marginStart="92dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/title"
         android:textSize="24sp"
         android:textStyle="bold|italic"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgMeal" />
 
