--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,8 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/</item>
         <item>@font/aclonica</item>
+        <item>@font/alkatra_semibold</item>
+        <item>@font/annie_use_your_telescope</item>
         <item>@font/fira_code_light</item>
         <item>@font/fjalla_one</item>
         <item>@font/hachi_maru_pop</item>
