--- a/app/src/main/res/layout/recycler_ingred.xml
+++ b/app/src/main/res/layout/recycler_ingred.xml
@@ -21,7 +21,7 @@
     <TextView
         android:id="@+id/txtCategory"
         android:layout_width="wrap_content"
-        android:layout_height="38dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="@string/title"
         android:textSize="24sp"
