--- a/app/src/main/res/layout/fragment_by_country.xml
+++ b/app/src/main/res/layout/fragment_by_country.xml
@@ -6,14 +6,35 @@
     android:layout_height="match_parent"
     tools:context=".Screens.FilterScreen.ByCountry.View.ByCountryFragment">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewCountry"
+        android:layout_width="match_parent"
+        android:layout_height="639dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lottieEarth" />
+
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="197dp"
-        android:layout_marginTop="317dp"
-        android:text="@string/txtcountry"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="28dp"
+        android:fontFamily="@font/fira_code_light"
+        android:text="@string/world"
+        android:textSize="24sp"
+        android:textStyle="bold|italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottieEarth"
+        android:layout_width="119dp"
+        android:layout_height="81dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="11dp"
+        app:layout_constraintStart_toEndOf="@+id/textView7"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/earth" />
 </androidx.constraintlayout.widget.ConstraintLayout>
