add search to ingredients and Category

--- a/app/src/main/res/layout/fragment_by_category.xml
+++ b/app/src/main/res/layout/fragment_by_category.xml
@@ -10,8 +10,8 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="48dp"
         android:fontFamily="@font/fjalla_one"
         android:text="@string/catFilter"
         android:textSize="24sp"
@@ -19,11 +19,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchBar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:queryHint="Search for a meal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:queryHint="Hmmm Specific Cuisine?"
+        />
+
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottieCategory"
         android:layout_width="164dp"
         android:layout_height="112dp"
-        android:layout_marginTop="-20dp"
+        android:layout_marginStart="-20dp"
+        android:layout_marginTop="-10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView6"
         app:layout_constraintTop_toTopOf="parent"
@@ -36,7 +47,7 @@
         android:layout_width="409dp"
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lottieCategory" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
