--- a/app/src/main/res/layout/fragment_by_ingredient.xml
+++ b/app/src/main/res/layout/fragment_by_ingredient.xml
@@ -10,19 +10,28 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginStart="60dp"
         android:text="@string/bying"
         android:textSize="24sp"
         android:textStyle="bold|italic"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/searchBar" />
+
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchBar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:queryHint="Search for a meal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:queryHint="What do you have?"
+        />
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottieingredient"
         android:layout_width="182dp"
         android:layout_height="96dp"
-        android:layout_marginTop="-16dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toTopOf="parent"
         app:lottie_autoPlay="true"
@@ -33,7 +42,6 @@
         android:id="@+id/recyclerIngredient"
         android:layout_width="match_parent"
         android:layout_height="641dp"
-        android:layout_marginTop="12dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lottieingredient" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 </androidx.constraintlayout.widget.ConstraintLayout>
