--- a/app/src/main/res/layout/recycler_meal_details.xml
+++ b/app/src/main/res/layout/recycler_meal_details.xml
@@ -10,7 +10,7 @@
         android:id="@+id/txtIngrediant"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
         android:text="@string/ingrediant"
         android:textSize="16sp"
@@ -21,8 +21,10 @@
         android:id="@+id/imgingred"
         android:layout_width="72dp"
         android:layout_height="64dp"
-        android:layout_marginStart="29dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="26dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/txtIngrediant"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
