--- a/app/src/main/res/layout/fragment_by_category.xml
+++ b/app/src/main/res/layout/fragment_by_category.xml
@@ -46,6 +46,7 @@
         android:id="@+id/recyclerCategoryfilter"
         android:layout_width="409dp"
         android:layout_height="0dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
