UI Color managment

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -27,6 +27,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+
+        android:background="@color/white"
+        app:itemIconTint="@color/brown"
+        app:itemTextColor="@color/brown"
+
         app:menu="@menu/botton_nav_menu"/>
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
