--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -113,7 +113,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerCountry"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="14dp"
                 android:nestedScrollingEnabled="false"
