--- a/app/src/main/res/layout/fragment_on_click_meal.xml
+++ b/app/src/main/res/layout/fragment_on_click_meal.xml
@@ -54,7 +54,8 @@
                 android:layout_width="77dp"
                 android:layout_height="58dp"
                 android:layout_marginTop="8dp"
-                app:layout_constraintStart_toStartOf="@+id/cbHeart"
+                android:layout_marginEnd="-20dp"
+                app:layout_constraintEnd_toEndOf="@+id/imgMealDetails"
                 app:layout_constraintTop_toBottomOf="@+id/imgMealDetails"
                 app:lottie_autoPlay="true"
                 app:lottie_loop="true"
