--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="appBackgroundColor">#E1D4C1</color>
+    <color name="appTextColor">#7E102C</color>
+    <color name="bottom_nav_color">#FFFFFF</color> <!-- White text/icons -->
+    <color name="bottom_nav_color_selected">#7E102C</color> <!-- Red text/icons -->
+    <color name="black">#000000</color>
+    <color name="brown">#795757</color>
+    <color name="white">#FFFFFF</color>
+
 </resources>
