--- a/app/src/main/res/layout/fragment_planner.xml
+++ b/app/src/main/res/layout/fragment_planner.xml
@@ -49,7 +49,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/plannedRecycler"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="44dp"
                 android:layout_marginBottom="16dp"
